--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": ".",
+  "homepage": "https://github.com/phcarvalho/gitrepos-tracker",
   "name": "gitrepos-tracker",
   "version": "0.1.0",
   "private": true,
